chore: cleanup code and autoformat
autoformat with IntelliJ

Signed-off-by: Tom Schneider <228496304+tomschneider-ba@users.noreply.github.com>