@@ -25,9 +25,8 @@ import java.util.List;
 import static de.ba.oiam.bundidsim.services.UserAttributesService.TRUSTLEVEL_HOCH;
 import static de.ba.oiam.bundidsim.services.UserAttributesService.UserAttribute;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-@SpringBootTest(classes={UserAttributesService.class, UserFieldDefinitionService.class})
+@SpringBootTest(classes = {UserAttributesService.class, UserFieldDefinitionService.class})
 class UserAttributesServiceTest {
 
     @Autowired
@@ -44,25 +43,21 @@ class UserAttributesServiceTest {
         String trustLevel = TRUSTLEVEL_HOCH;
         List<UserAttribute> list = service.getUserAttributes(user, trustLevel);
 
-        assertNotNull(list);
-        assertThat(list.size()).isEqualTo(3);
+        assertThat(list).hasSize(3);
 
-        UserAttribute u1 = list.get(0);
-        assertNotNull(u1);
+        UserAttribute u1 = list.getFirst();
         assertThat(u1.getName()).isEqualTo("urn:oid:2.5.4.4");
         assertThat(u1.getFriendlyName()).isEqualTo("surname");
         assertThat(u1.getTrustLevel()).isEqualTo(trustLevel);
         assertThat(u1.getValue()).isEqualTo("Schmidt");
 
         UserAttribute u2 = list.get(1);
-        assertNotNull(u2);
         assertThat(u2.getName()).isEqualTo("urn:oid:2.5.4.42");
         assertThat(u2.getFriendlyName()).isEqualTo("givenName");
         assertThat(u2.getTrustLevel()).isEqualTo(trustLevel);
         assertThat(u2.getValue()).isEqualTo("Helmut");
 
         UserAttribute u3 = list.get(2);
-        assertNotNull(u3);
         assertThat(u3.getName()).isEqualTo("urn:oid:1.3.6.1.4.1.33592.1.3.5");
         assertThat(u3.getFriendlyName()).isEqualTo("gender");
         assertThat(u3.getTrustLevel()).isEqualTo("UNTERGEORDNET");
